# energy-contracts

./: .gitignore  .spectral.yaml  CHANGELOG.md  CLAUDE.md  REVIEW.md  SSOT_COMPLIANCE.md  pyproject.toml  pytest.ini  redocly.yaml  renovate.json
docs/: CI_OFFLOAD_HUNT_2026-06-14.md  DEFERRED_INTEGRATIONS.md  HUNTER_ROUND_2026-06-08.md
energy_contracts/: __init__.py  bedrock.py
examples/: dr-dispatch-economic.json  dr-dispatch-reliability.json  esg-policy-economic-both.json  esg-policy-reliability.json  schedule-simple.json  schedule-weekday.json  telemetry-sample.json
protocols/: asyncapi-mqtt.yaml  broker-architecture.md  bundle-signing.md  commissioning-hash.md  mqtt-topics.md
reviews/: INDEX.md  PROTOCOL.md  R13.md  R14.md  R15.md  R16.md  R17.md  TEMPLATE.md
schemas/: _index.yaml  agent_contracts.json  ai_model_registry.json  anomaly_response.json  auth_policy.json  auth_scopes.json  building_archetypes.json  building_envelope.json  building_usage_map.json  bundle_manifest.json  common.json  computer_profile.json  control_command.json  control_response.json  data_classification.json  db_migrations.json  dr_event.json  edge_registration.json  edge_status.json  emission_factors.json  ems_strategies.json  energy_constants.json  energy_units.json  engineering_diff.json  engineering_session.json  error_response.json  esg_venue_bulk_sync.json  forecast_response.json  i18n_keys.json  lint_format.json  logging_format.json  market_prices.json  mqtt_topics.json  nl_intents.json  openapi_responses.json  pipeline_status.json  port_allocation.json  provision.json  (+12 more)
(+159 files in other folders)
