[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-contracts"
version = "0.3.16"
description = "VW/GB/EA/Agents 공유 인터페이스 SSOT (JSON Schema + Pydantic 모델)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "datamodel-code-generator>=0.26",  # gen_pydantic_models.py
]

# 패키지: energy_contracts/ 디렉토리만 wheel 에 포함.
# schemas/ 와 _pydantic_models/ 는 그 안의 서브패키지.
[tool.setuptools.packages.find]
include = ["energy_contracts*"]
exclude = ["tests*", "scripts*", "scratch*", "reviews*"]

# JSON 스키마 파일을 wheel package data 로 포함.
[tool.setuptools.package-data]
"energy_contracts" = ["schemas/*.json", "schemas/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
